# qa-automation-base

./: .gitignore  LICENSE.md  README.md  build.gradle  build.gradle.kts  first.py  index.html  jest-playwright.config.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  pom.xml  pytest.ini  settings.gradle  settings.gradle.kts  testSetup.js
.github/workflows/: ci.yaml
1/export/: influxDbData.txt
2/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2/export/: influxDbData.txt  prometheusData.txt
2/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
2/widgets/: behaviors.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
3/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure/: c35628a5-f781-46c7-915b-8082b0a1ccf4-result.json  e1ceb65c-e8fd-49e1-872e-2f0122285f31-result.json
api/: ErrorResponse.ts  axios.ts  controllers.ts
base/: temp_base.js
helpers/: BasePage.ts
pages/: AuthPage.ts  DashboardPage.ts  ListOfElements.ts  MultiLevelDropdownPage.ts  SearchPage.ts  SearchResultPage.ts  TagsInputBoxPage.ts
python-pytest/: pyproject.toml  pytest.ini
python-pytest/python_pytest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-pytest/tests/: init_driver.py  test_simple.py
test/: first_test.js  mocha.opts
tests/: api.test.ts  main.test.ts  multi_level_dpodown.test.ts  tags_input_box.test.ts
(+292 files in other folders)
